# MemeString

./: CMakeLists.txt  LICENSE  README.md  xmake.lua
docs/chinese/: Chinese character frequency list 汉字字频表 (2022_8_5 00_08_55).html
include/mego/: README.md  common.h
include/mego/err/: avec_convert.h  ec.h  ec_impl.h  lmdb_convert.h  sqlite3_convert.h
include/mego/err/convert/: avutil.h  lmdb.h  sqlite3.h
include/mego/fs/: dir.h
include/mego/hardware/clock/: manipulate.h
include/mego/hardware/cpu/: count.h  id.h  instruction.h  usage.h
include/mego/hardware/disk/: disk.h
include/mego/hardware/memory/: memory.h  memory_def.h  memory_simpl.h
include/mego/mem/: cstr_alloc_if_no_end_zero.h
include/mego/numeric/: types.h
include/mego/predef/: compiler.h  endian.h  has_attribute.h  has_feature.h  has_include.h  helper_macros.h  threads.h
include/mego/predef/architecture/: arm.h  blackfin.h  ia64.h  m68k.h  parisc.h  sparc.h  sys370.h  sys390.h  x86.h  z.h
include/mego/predef/compiler/: clang.h  gcc.h  visualc.h
include/mego/predef/hdr/: unistd.h
include/mego/predef/keyword/: export.h  import.h
include/mego/predef/lang/: version.h
include/mego/predef/os/: android.h  bsd.h  ios.h  linux.h  macos.h  windows.h
include/mego/predef/symbol/: deprecated.h  export.h  inline.h  likely.h  pragma_message.h  restrict.h
include/mego/thrd/: call_once.h  numeric_id.h  spinlock.h  spinwait.h  threads.h
include/mego/util/: atomic.h  atomic_fwd.h  conv_to_native_c_str.h  converted_native_string.h  get_exec_path.h  get_module_path.h  get_temp_path.h  get_user_country.h  get_user_language.h  math.h  sys_stat.h  sys_types.h
include/mego/util/detail/: msvc_atomic.h
include/mego/util/endian/: byte_swap.h  net.h
include/mego/util/os/: get_proc_name_by_pid.h
include/mego/util/std/: errno.h  file.h  stddef.h  string.h  time.h
include/megopp/: README.md
include/megopp/endian/: arithmetic_member.h  bit_field_member.h  byte_swap.h  net.h  types.h
include/megopp/err/: err.h  err.hpp  into_yyjson.h
include/megopp/fs/: c_file.h  dir.h
include/megopp/hardware/mmc/: info.h
include/megopp/help/: README.md  iterator.h  noncopyable.h  null_mutex.h  objbuf.h  singleton.h  traverse.h  traverser.h  trivial_create.h  type_traits.h
include/megopp/memory/: atomic_shared_ptr.h  atomic_shared_ptr.hpp  cow_ptr.h  emtx_cow_ptr.h  hashable_weak_ptr.h  hashable_weak_ptr.hpp
include/megopp/netif/: physical_address.h
include/megopp/numeric/: types.h
include/megopp/os/: dynamic_library.h
include/megopp/os/linux/: fd.h
include/megopp/perf/: mem_usage.h
include/megopp/predef/: has_cxx11.h  namespace_alias.h
include/megopp/thrd/: numeric_id.h  spin_mutex.h  spin_shared_mutex.h  synchronized.h
include/megopp/util/: README.md  atomic_counter.h  c_wrap_shared_ptr.h  c_wrap_smart_ptr.h  c_wrap_weak_ptr.h  scope_cleanup.h  scope_locker.h  simple_counter.h  template_random.h  templet_random.h
include/meme/: buffer.h  buffer_fwd.h  common.h  native.h  rune.h  string.h  string_builder.h  string_builder_fwd.h  string_editor.h  string_editor_fwd.h  string_fwd.h  string_memory.h  string_memory_fwd.h  variable_buffer.h  variable_buffer_fwd.h  variant.h  variant_fwd.h  varts_fwd.h  word.h
include/meme/std/: string16.h
include/meme/unsafe/: buffer_view.h  string_view.h  view.h
include/meme/utf/: converter.h  converter_fwd.h  default_converter.h  u16rune.h  u16rune_fwd.h  u32rune.h  u8rune.h  u8rune_fwd.h
include/memepp/: buffer.hpp  buffer_def.hpp  buffer_fwd.hpp  buffer_impl.hpp  buffer_tmpimpl.hpp  buffer_view.hpp  buffer_view_def.hpp  buffer_view_fwd.hpp  buffer_view_impl.hpp  dll.hpp  errc.hpp  iterator.hpp  metatype_fwd.hpp  native.hpp  rune.hpp  rune_def.hpp  rune_fwd.hpp  rune_impl.hpp  rune_iterator.hpp  string.hpp  string_builder.hpp  string_builder_def.hpp  string_builder_fwd.hpp  string_builder_impl.hpp  string_def.hpp  string_editor.hpp  string_editor_def.hpp  string_editor_fwd.hpp  string_editor_impl.hpp  string_fwd.hpp  string_impl.hpp  string_templateimpl.hpp  string_tmpimpl.hpp  string_view.hpp  string_view_def.hpp  string_view_fwd.hpp  string_view_impl.hpp  string_view_templateimpl.hpp  string_view_tmpimpl.hpp  variable_buffer.hpp  (+17 more)
include/memepp/convert/: asio.hpp  common.hpp  common_def.hpp  exprtk_ex.hpp  fmt.hpp  nlohmann_json.hpp  qcbor.hpp  rapidjson.hpp  redis++.hpp  self.hpp  toml11.hpp  toml_ex.hpp  uvw.hpp  yyjson.hpp
include/memepp/hash/: std_hash.hpp
include/memepp/predef/: macro_option.hpp
include/memepp/split/: self.hpp
include/memepp/util/: relative_exec_path.hpp
include/mmutils/: lmdb_team.hpp  program_path.hpp
include_private/meme/impl/: algorithm.h  atomic.h  atomic_fwd.h  string.h  string_builder.h  string_memory.h  string_p__large.h  string_p__medium.h  string_p__small.h  string_p__user.h  variant.h
projects/vs/libmeme_string/: dllmain.cpp  export.def  libmeme_string.sln  libmeme_string.vcxproj  libmeme_string.vcxproj.filters
src/: MemeBuffer.c  MemeStringEditor.c  MemeVariableBuffer.c  meme_atomic__basics.c  meme_buffer.c  meme_impl__algorithm.c  meme_impl__string_large.c  meme_impl__string_medium.c  meme_impl__string_small.c  meme_impl__string_user.c  meme_memory.c  meme_rune.c  meme_string__basics.c  meme_string__stack.c  meme_string_builder.c  meme_utf_converter.c  meme_utf_u16rune.c  meme_utf_u32rune.c  meme_utf_u8rune.c  meme_variable_buffer.c  meme_variant.c  meme_word.c
test/mmpp_benchmark/: CMakeLists.txt  common.hpp  main.cpp  mmbm_string_copy.cpp  mmbm_string_creation.cpp  mmbm_string_find.cpp
unit_test/mgpp_unittest/: CMakeLists.txt  main.cpp  test_atomic.cpp  test_endian.cpp  test_lockfree_doubly_linked_list.cpp.backup  test_mem_pool.cpp  test_path.cpp  test_spinlock_doubly_linked_list.cpp
unit_test/mmpp_thrd_unittest/: CMakeLists.txt  main.cpp
unit_test/mmpp_unittest/: CMakeLists.txt  mmpp_string_compare.cpp  mmpp_string_frontback.cpp  mmpp_string_split.cpp  mmpp_unittest.cpp  mmpp_unittest.sln  mmpp_unittest.vcxproj  mmpp_unittest.vcxproj.filters  mmpp_variable_buffer_resize.cpp  xmake.lua
(+48 files in other folders)
